--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -704,14 +704,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">17</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>April 26th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">43</td>
+                    <td class="winning">58</td>
+                    <td class="winning">54</td>
+                    <td class="winning">38</td>
+                    <td class="winning" id="lbw">25</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
