--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -245,24 +245,24 @@
             <p class="machine">59 - 72 - 26 - 20 - 83</p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
+            <h3 class="game">Gold</h3>
+            <p class="winning">13 - 15 - 57 - 80 - 85</p>
+            <p class="machine">17 - 78 - 73 - 21 - 46</p>        
+        </article>
+        <article>
+            <h3 class="game">Jackpot</h3>
+            <p class="winning">81 - 38 - 80 - 45 - 21</p>
+            <p class="machine">18 - 37 - 28 - 33 - 62</p>        
+        </article>
+        <article>
+            <h3 class="game">Bonanza</h3>
+            <p class="winning">43 - 58 - 54 - 38 - 25</p>
             <p class="machine"></p>        
         </article>
         <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
-        </article>
-        <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
-        </article>
-        <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <h3 class="game">Vag</h3>
+            <p class="winning">46 - 58 - 69 - 47 - 28</p>
+            <p class="machine">7 - 13 - 8 - 37 - 63</p>        
         </article>
     </section>
     </div>
