--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterdays results">
-            <h2 class="date">thursday 25/04/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">44 - 59 - 68 - 9 - 18</p>
-                <p class="machine">56 - 39 - 29 - 53 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">3 - 84 - 48 - 37 - 58</p>
-                <p class="machine">86 - 67 - 90 - 18 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">13 - 51 - 15 - 8 - 12</p>
-                <p class="machine">84 - 39 - 37 - 89 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">50 - 55 - 46 - 77 - 68</p>
-                <p class="machine">42 - 12 - 63 - 78 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">89 - 6 - 35 - 23 - 47</p>
-                <p class="machine">39 - 37 - 38 - 19 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">10 - 36 - 81 - 30 - 27</p>
-                <p class="machine">83 - 25 - 86 - 53 - 37</p>        
-            </article>
-        </section>
-
-        
-    <section aria-label="today result">
         <h2 class="date">friday 26/4/2024</h2>
         <article>
             <h3 class="game">Royal</h3>
@@ -257,7 +222,7 @@
         <article>
             <h3 class="game">Bonanza</h3>
             <p class="winning">43 - 58 - 54 - 38 - 25</p>
-            <p class="machine"></p>        
+            <p class="machine">86 - 81 - 11 - 44 - 29</p>        
         </article>
         <article>
             <h3 class="game">Vag</h3>
@@ -265,6 +230,40 @@
             <p class="machine">7 - 13 - 8 - 37 - 63</p>        
         </article>
     </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 27/4/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">58 - 74 - 87 - 35 - 68</p>
+                <p class="machine">61 - 57 - 13 - 85 - 20</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">22 - 29 - 68 - 38 - 32</p>
+                <p class="machine">52 - 44 - 74 - 23 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">68 - 74 - 1 - 33 - 39</p>
+                <p class="machine">48 - 59 - 4 - 24 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+        </section>
     </div>
     
     <div class="gameList">
