--- a/GAMES/5Inter.html
+++ b/GAMES/5Inter.html
@@ -1389,6 +1389,28 @@
                 </tr>
             </tbody>
 
+                                    <!-- day35-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">35</td>
+                    <td class="days"><small></small></td>
+                
+                    <!-- winning-->
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody>        
+
 
 
         </table>
