--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">48 - 59 - 4 - 24 - 64</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">06</h3>
+                <p class="winning">58 - 61 - 78 - 69 - 45</p>
+                <p class="machine">86 - 24 - 43 - 64 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">79 - 29 - 56 - 81 - 24</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">57 - 58 - 48 - 37 - 54</p>
+                <p class="machine">36 - 61 - 52 - 30 - 40</p>        
             </article>
         </section>
     </div>
