--- a/GAMES/16Fair-c.html
+++ b/GAMES/16Fair-c.html
@@ -1438,7 +1438,9 @@
                                     <!-- day35-->
             <tbody>
                 <tr>
-                    <td class="serial-num">35</td>
+                    <td class="serial-num">35
+                        
+                    </td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
