--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -713,11 +713,11 @@
                     <td class="winning" id="lbw">24</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">41</td>
+                    <td class="machine">28</td>
+                    <td class="machine">11</td>
+                    <td class="machine">10</td>
+                    <td class="machine" id="lbm">82</td>
                 </tr>
             </tbody>     
             
