--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -197,41 +197,6 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="yesterdays results">
-        <h2 class="date">friday 26/4/2024</h2>
-        <article>
-            <h3 class="game">Royal</h3>
-            <p class="winning">70 - 45 - 75 - 17 - 9</p>
-            <p class="machine">20 - 90 - 8 - 61 - 6</p>        
-        </article>
-        <article>
-            <h3 class="game">Metro</h3>
-            <p class="winning">15 - 57 - 2 - 86 - 35</p>
-            <p class="machine">59 - 72 - 26 - 20 - 83</p>        
-        </article>
-        <article>
-            <h3 class="game">Gold</h3>
-            <p class="winning">13 - 15 - 57 - 80 - 85</p>
-            <p class="machine">17 - 78 - 73 - 21 - 46</p>        
-        </article>
-        <article>
-            <h3 class="game">Jackpot</h3>
-            <p class="winning">81 - 38 - 80 - 45 - 21</p>
-            <p class="machine">18 - 37 - 28 - 33 - 62</p>        
-        </article>
-        <article>
-            <h3 class="game">Bonanza</h3>
-            <p class="winning">43 - 58 - 54 - 38 - 25</p>
-            <p class="machine">86 - 81 - 11 - 44 - 29</p>        
-        </article>
-        <article>
-            <h3 class="game">Vag</h3>
-            <p class="winning">46 - 58 - 69 - 47 - 28</p>
-            <p class="machine">7 - 13 - 8 - 37 - 63</p>        
-        </article>
-    </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 27/4/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -256,12 +221,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">79 - 29 - 56 - 81 - 24</p>
-                <p class="machine"></p>        
+                <p class="machine">41 - 28 - 11 - 10 - 82</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">57 - 58 - 48 - 37 - 54</p>
                 <p class="machine">36 - 61 - 52 - 30 - 40</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 28/04/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">65 - 6 - 64 - 73 - 7</p>
+                <p class="machine">89 - 85 - 19 - 38 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">10 - 1 - 54 - 60 - 64</p>
+                <p class="machine">55 - 24 - 73 - 18 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">24 - 51 - 82 - 18 - 68</p>
+                <p class="machine">27 - 16 - 42 - 89 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">60 - 26 - 19 - 37 - 59</p>
+                <p class="machine">61 - 30 - 36 - 76 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">20 - 67 - 51 - 9 - 2</p>
+                <p class="machine">15 - 37 - 87 - 83 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">58 - 60 - 57 - 52 - 88</p>
+                <p class="machine">3 - 83 - 23 - 33 - 5</p>        
             </article>
         </section>
     </div>
