--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -197,40 +197,7 @@
         </nav>
     </header>
     <div class="gameResults">
-            <h2 class="date">saturday 27/4/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">58 - 74 - 87 - 35 - 68</p>
-                <p class="machine">61 - 57 - 13 - 85 - 20</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">22 - 29 - 68 - 38 - 32</p>
-                <p class="machine">52 - 44 - 74 - 23 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">68 - 74 - 1 - 33 - 39</p>
-                <p class="machine">48 - 59 - 4 - 24 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">58 - 61 - 78 - 69 - 45</p>
-                <p class="machine">86 - 24 - 43 - 64 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">79 - 29 - 56 - 81 - 24</p>
-                <p class="machine">41 - 28 - 11 - 10 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">57 - 58 - 48 - 37 - 54</p>
-                <p class="machine">36 - 61 - 52 - 30 - 40</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
+        <section aria-label="yesterday result">
             <h2 class="date">sunday 28/04/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -261,6 +228,41 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">58 - 60 - 57 - 52 - 88</p>
                 <p class="machine">3 - 83 - 23 - 33 - 5</p>        
+            </article>
+        </section>
+        
+
+        <section aria-label="today result">
+            <h2 class="date">monday 29/04/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">89 - 86 - 78 - 60 - 66</p>
+                <p class="machine">54 - 45 - 1 - 7 - 24</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">90 - 40 - 68 - 53 - 56</p>
+                <p class="machine">32 - 3 - 45 - 54 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">8 - 76 - 65 - 38 - 60</p>
+                <p class="machine">2 - 26 - 71 - 62 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">12 - 30 - 14 - 4 - 24</p>
+                <p class="machine">81 - 78 - 71 - 26 - 61</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">87 - 66 - 5 - 45 - 12</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">9 - 4 - 3 - 56 - 80</p>
+                <p class="machine">21 - 40 - 63 - 90 - 77</p>        
             </article>
         </section>
     </div>
