--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -741,11 +741,11 @@
                     <td class="winning" id="lbw">12</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">14</td>
+                    <td class="machine">58</td>
+                    <td class="machine">73</td>
+                    <td class="machine">10</td>
+                    <td class="machine" id="lbm">55</td>
                 </tr>
             </tbody> 
 
