--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 28/04/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">65 - 6 - 64 - 73 - 7</p>
-                <p class="machine">89 - 85 - 19 - 38 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">10 - 1 - 54 - 60 - 64</p>
-                <p class="machine">55 - 24 - 73 - 18 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">24 - 51 - 82 - 18 - 68</p>
-                <p class="machine">27 - 16 - 42 - 89 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">60 - 26 - 19 - 37 - 59</p>
-                <p class="machine">61 - 30 - 36 - 76 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">20 - 67 - 51 - 9 - 2</p>
-                <p class="machine">15 - 37 - 87 - 83 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">58 - 60 - 57 - 52 - 88</p>
-                <p class="machine">3 - 83 - 23 - 33 - 5</p>        
-            </article>
-        </section>
-        
-
-        <section aria-label="today result">
             <h2 class="date">monday 29/04/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -257,12 +222,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">87 - 66 - 5 - 45 - 12</p>
-                <p class="machine"></p>        
+                <p class="machine">14 - 58 - 73 - 10 - 55</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">9 - 4 - 3 - 56 - 80</p>
                 <p class="machine">21 - 40 - 63 - 90 - 77</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 30/04/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">57 - 22 - 60 - 66 - 18</p>
+                <p class="machine">3 - 25 - 88 - 20 - 26</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
