--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,9 +239,9 @@
                 <p class="machine">3 - 25 - 88 - 20 - 26</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">06</h3>
+                <p class="winning">60 - 58 - 28 - 22 - 52</p>
+                <p class="machine">51 - 2 - 68 - 88 - 15</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
