--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -244,24 +244,24 @@
                 <p class="machine">51 - 2 - 68 - 88 - 15</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">84 - 86 - 25 - 54 - 49</p>
+                <p class="machine">5 - 41 - 45 - 52 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">73 - 28 - 15 - 72 - 38</p>
+                <p class="machine">88 - 79 - 61 - 70 - 80</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky G</h3>
+                <p class="winning">71 - 82 - 6 - 79 - 24</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">74 - 3 - 33 - 6 - 64</p>
+                <p class="machine">2 - 87 - 63 - 24 - 86</p>        
             </article>
         </section>
     </div>
