--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -743,11 +743,11 @@
                     <td class="winning" id="lbw">24</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">9</td>
+                    <td class="machine">35</td>
+                    <td class="machine">28</td>
+                    <td class="machine">20</td>
+                    <td class="machine" id="lbm">76</td>
                 </tr>
             </tbody> 
 
