--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,7 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">monday 29/04/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">89 - 86 - 78 - 60 - 66</p>
-                <p class="machine">54 - 45 - 1 - 7 - 24</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">90 - 40 - 68 - 53 - 56</p>
-                <p class="machine">32 - 3 - 45 - 54 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">8 - 76 - 65 - 38 - 60</p>
-                <p class="machine">2 - 26 - 71 - 62 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">12 - 30 - 14 - 4 - 24</p>
-                <p class="machine">81 - 78 - 71 - 26 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">87 - 66 - 5 - 45 - 12</p>
-                <p class="machine">14 - 58 - 73 - 10 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">9 - 4 - 3 - 56 - 80</p>
-                <p class="machine">21 - 40 - 63 - 90 - 77</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
-            <h2 class="date">tuesday 30/04/2024</h2>
+            <h2 class="date">tuesday 30/05/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
                 <p class="winning">57 - 22 - 60 - 66 - 18</p>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Lucky G</h3>
                 <p class="winning">71 - 82 - 6 - 79 - 24</p>
-                <p class="machine"></p>        
+                <p class="machine">9 - 35 - 28 - 20 - 76</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">74 - 3 - 33 - 6 - 64</p>
                 <p class="machine">2 - 87 - 63 - 24 - 86</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 01/04/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">59 - 26 - 64 - 78 - 77</p>
+                <p class="machine">88 - 85 - 22 - 71 - 5</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">11 - 10 - 90 - 75 - 28</p>
+                <p class="machine">37 - 56 - 9 - 16 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
