--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -244,9 +244,9 @@
                 <p class="machine">37 - 56 - 9 - 16 - 46</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">88 - 32 - 10 - 80 - 9</p>
+                <p class="machine">3 - 44 - 47 - 37 - 18</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
