--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,14 +249,14 @@
                 <p class="machine">3 - 44 - 47 - 37 - 18</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">46 - 9 - 73 - 60 - 51</p>
+                <p class="machine">54 - 25 - 4 - 86 - 22</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">64 - 10 - 87 - 66 - 44</p>
+                <p class="machine">35 - 6 - 31 - 43 - 37</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
