--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">tuesday 30/05/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">57 - 22 - 60 - 66 - 18</p>
-                <p class="machine">3 - 25 - 88 - 20 - 26</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">60 - 58 - 28 - 22 - 52</p>
-                <p class="machine">51 - 2 - 68 - 88 - 15</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">84 - 86 - 25 - 54 - 49</p>
-                <p class="machine">5 - 41 - 45 - 52 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">73 - 28 - 15 - 72 - 38</p>
-                <p class="machine">88 - 79 - 61 - 70 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky G</h3>
-                <p class="winning">71 - 82 - 6 - 79 - 24</p>
-                <p class="machine">9 - 35 - 28 - 20 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">74 - 3 - 33 - 6 - 64</p>
-                <p class="machine">2 - 87 - 63 - 24 - 86</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 01/04/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -257,6 +223,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">64 - 10 - 87 - 66 - 44</p>
                 <p class="machine">35 - 6 - 31 - 43 - 37</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">01/05/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">26 - 16 - 39 - 57 - 80</p>
+                <p class="machine">72 - 66 - 68 - 59 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">70 - 1 - 88 - 60 - 81</p>
+                <p class="machine">8 - 19 - 2 - 43 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
             <article>
                 <h3 class="game"></h3>
