--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -244,24 +244,29 @@
                 <p class="machine">8 - 19 - 2 - 43 - 44</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">62 - 25 - 59 - 18 - 33</p>
+                <p class="machine">36 - 5 - 80 - 46 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">75 - 27 - 2 - 59 - 72</p>
+                <p class="machine">58 - 62 - 69 - 39 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">82 - 36 - 83 - 63 - 39</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">29 - 14 - 31 - 24 - 17</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">3 - 89 - 30 - 5 - 62</p>
+                <p class="machine">72 - 81 - 31 - 26 - 22</p>        
             </article>
         </section>
     </div>
