--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -742,11 +742,11 @@
                     <td class="winning" id="lbw">39</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">55</td>
+                    <td class="machine">4</td>
+                    <td class="machine">14</td>
+                    <td class="machine">70</td>
+                    <td class="machine" id="lbm">15</td>
                 </tr>
             </tbody>
 
