--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -256,17 +256,51 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">82 - 36 - 83 - 63 - 39</p>
-                <p class="machine"></p>        
+                <p class="machine">55 - 4 - 14 - 70 - 15</p>        
             </article>
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">29 - 14 - 31 - 24 - 17</p>
-                <p class="machine"></p>        
+                <p class="machine">70 - 37 - 67 - 86 - 80</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">3 - 89 - 30 - 5 - 62</p>
                 <p class="machine">72 - 81 - 31 - 26 - 22</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 03/05/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">35 - 66 - 89 - 1 - 8</p>
+                <p class="machine">90 - 51 - 3 - 25 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
