--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -741,11 +741,11 @@
                     <td class="winning" id="lbw">17</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">70</td>
+                    <td class="machine">37</td>
+                    <td class="machine">67</td>
+                    <td class="machine">86</td>
+                    <td class="machine" id="lbm">80</td>
                 </tr>
             </tbody> 
             
