--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 01/04/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">59 - 26 - 64 - 78 - 77</p>
-                <p class="machine">88 - 85 - 22 - 71 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">11 - 10 - 90 - 75 - 28</p>
-                <p class="machine">37 - 56 - 9 - 16 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">88 - 32 - 10 - 80 - 9</p>
-                <p class="machine">3 - 44 - 47 - 37 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">46 - 9 - 73 - 60 - 51</p>
-                <p class="machine">54 - 25 - 4 - 86 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">64 - 10 - 87 - 66 - 44</p>
-                <p class="machine">35 - 6 - 31 - 43 - 37</p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">01/05/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -278,14 +244,14 @@
                 <p class="machine">90 - 51 - 3 - 25 - 13</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Metro</h3>
+                <p class="winning">18 - 33 - 54 - 75 - 7</p>
+                <p class="machine">11 - 90 - 46 - 79 - 40</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Gold</h3>
+                <p class="winning">17 - 14 - 50 - 22 - 5</p>
+                <p class="machine">54 - 25 - 2 - 51 - 62</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
