--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -254,19 +254,19 @@
                 <p class="machine">54 - 25 - 2 - 51 - 62</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">62 - 41 - 6 - 72 - 58</p>
+                <p class="machine">74 - 20 - 31 - 78 - 61</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">78 - 69 - 22 - 70 - 51</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">54 - 9 - 21 - 68 - 61</p>
+                <p class="machine">41 - 5 - 53 - 70 - 45</p>        
             </article>
         </section>
     </div>
