--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -736,11 +736,11 @@
                     <td class="winning" id="lbw">51</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">64</td>
+                    <td class="machine">59</td>
+                    <td class="machine">54</td>
+                    <td class="machine">38</td>
+                    <td class="machine" id="lbm">68</td>
                 </tr>
             </tbody>
 
