--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,45 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">01/05/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">26 - 16 - 39 - 57 - 80</p>
-                <p class="machine">72 - 66 - 68 - 59 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">70 - 1 - 88 - 60 - 81</p>
-                <p class="machine">8 - 19 - 2 - 43 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">62 - 25 - 59 - 18 - 33</p>
-                <p class="machine">36 - 5 - 80 - 46 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">75 - 27 - 2 - 59 - 72</p>
-                <p class="machine">58 - 62 - 69 - 39 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">82 - 36 - 83 - 63 - 39</p>
-                <p class="machine">55 - 4 - 14 - 70 - 15</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">29 - 14 - 31 - 24 - 17</p>
-                <p class="machine">70 - 37 - 67 - 86 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">3 - 89 - 30 - 5 - 62</p>
-                <p class="machine">72 - 81 - 31 - 26 - 22</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 03/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -261,12 +222,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">78 - 69 - 22 - 70 - 51</p>
-                <p class="machine"></p>        
+                <p class="machine">64 - 59 - 54 - 38 - 68</p>        
             </article>
             <article>
                 <h3 class="game">vag</h3>
                 <p class="winning">54 - 9 - 21 - 68 - 61</p>
                 <p class="machine">41 - 5 - 53 - 70 - 45</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 04/05/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">70 - 86 - 51 - 5 - 79</p>
+                <p class="machine">84 - 8 - 27 - 46 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">88 - 70 - 36 - 69 - 46</p>
+                <p class="machine">9 - 14 - 10 - 48 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">28 - 50 - 59 - 15 - 70</p>
+                <p class="machine">06 - 56 - 62 - 10 - 39</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">74 - 7 - 37 - 61 - 47</p>
+                <p class="machine">48 - 83 - 38 - 28 - 69</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">84 - 87 - 35 - 86 - 58</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">71 - 6 - 60 - 63 - 55</p>
+                <p class="machine">41 - 42 - 79 - 72 - 5</p>        
             </article>
         </section>
     </div>
