MAY 5/Sunday/2024 with loading feature

--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -735,11 +735,11 @@
                     <td class="winning" id="lbw">58</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">26</td>
+                    <td class="machine">54</td>
+                    <td class="machine">47</td>
+                    <td class="machine">81</td>
+                    <td class="machine" id="lbm">4</td>
                 </tr>
             </tbody>    
             
