--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 03/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">35 - 66 - 89 - 1 - 8</p>
-                <p class="machine">90 - 51 - 3 - 25 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">18 - 33 - 54 - 75 - 7</p>
-                <p class="machine">11 - 90 - 46 - 79 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">17 - 14 - 50 - 22 - 5</p>
-                <p class="machine">54 - 25 - 2 - 51 - 62</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">62 - 41 - 6 - 72 - 58</p>
-                <p class="machine">74 - 20 - 31 - 78 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">78 - 69 - 22 - 70 - 51</p>
-                <p class="machine">64 - 59 - 54 - 38 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">54 - 9 - 21 - 68 - 61</p>
-                <p class="machine">41 - 5 - 53 - 70 - 45</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 04/05/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">84 - 87 - 35 - 86 - 58</p>
-                <p class="machine"></p>        
+                <p class="machine">26 - 54 - 47 - 81 - 4</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">71 - 6 - 60 - 63 - 55</p>
                 <p class="machine">41 - 42 - 79 - 72 - 5</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">sunday 05/5/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">25 - 1 - 80 - 9 - 87</p>
+                <p class="machine">61 - 55 - 89 - 35 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">90 - 85 - 36 - 21 - 66</p>
+                <p class="machine">2 - 64 - 12 - 69 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">39 - 2 - 45 - 90 - 74</p>
+                <p class="machine">43 - 6 - 44 - 1 - 47</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">86 - 78 - 23 - 56 - 36</p>
+                <p class="machine">87 - 79 - 16 - 22 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">29 - 72 - 85 - 30 - 2</p>
+                <p class="machine">63 - 21 - 11 - 74 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">73 - 77 - 68 - 90 - 31</p>
+                <p class="machine">16 - 36 - 38 - 82 - 65</p>        
             </article>
         </section>
     </div>
