folder for loading

--- a/index.html
+++ b/index.html
@@ -250,12 +250,7 @@
                 </div>
             </div>
         </footer>
-        <script>
-            window.addEventListener('load', function () {
-                var loading = document.getElementById('loading');
-                loading.style.display = 'none';
-            });
-        </script>
+        <script src="/Scripts/loading.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
