--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">saturday 04/05/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">70 - 86 - 51 - 5 - 79</p>
-                <p class="machine">84 - 8 - 27 - 46 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">88 - 70 - 36 - 69 - 46</p>
-                <p class="machine">9 - 14 - 10 - 48 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">28 - 50 - 59 - 15 - 70</p>
-                <p class="machine">06 - 56 - 62 - 10 - 39</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">74 - 7 - 37 - 61 - 47</p>
-                <p class="machine">48 - 83 - 38 - 28 - 69</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">84 - 87 - 35 - 86 - 58</p>
-                <p class="machine">26 - 54 - 47 - 81 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">71 - 6 - 60 - 63 - 55</p>
-                <p class="machine">41 - 42 - 79 - 72 - 5</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 05/5/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">73 - 77 - 68 - 90 - 31</p>
                 <p class="machine">16 - 36 - 38 - 82 - 65</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 06/5/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">58 - 24 - 72 - 51 - 74</p>
+                <p class="machine">10 - 36 - 83 - 31 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
