--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
                 </div>
             </div>
         </footer>
-        <script src="/Scripts/loading.js"></script>
-        <script src="script.js"></script>
+        <!-- <script src="/Scripts/loading.js"></script> -->
+        <!-- <script src="script.js"></script> -->
     </body>
 </html>
         
