--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <!-- End Google Tag Manager (noscript) -->
 
-        <div id="loading">
+        <!-- <div id="loading">
             <img src="/Assets/VLB_logo-removebg-loading-Img.jpg" id="loadingImage">
             <p>Loading... Please wait</p>
-        </div>
+        </div> -->
 
         <header>
             <div id="brand-container">
