--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -239,14 +239,14 @@
                 <p class="machine">10 - 36 - 83 - 31 - 18</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">People</h3>
+                <p class="winning">24 - 63 - 56 - 88 - 25</p>
+                <p class="machine">19 - 3 - 27 - 62 - 61</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">60 - 27 - 59 - 12 - 81</p>
+                <p class="machine">89 - 16 - 42 - 22 - 1</p>        
             </article>
             <article>
                 <h3 class="game"></h3>
