--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">89 - 16 - 42 - 22 - 1</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Metro</h3>
+                <p class="winning">62 - 46 - 60 - 14 - 75</p>
+                <p class="machine">63 - 79 - 58 - 8 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">36 - 50 - 20 - 29 - 10</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">11 - 24 - 75 - 21 - 42</p>
+                <p class="machine">38 - 69 - 8 - 29 - 35</p>        
             </article>
         </section>
     </div>
