--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -753,14 +753,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">18</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>May 6th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">36</td>
+                    <td class="winning">50</td>
+                    <td class="winning">20</td>
+                    <td class="winning">29</td>
+                    <td class="winning" id="lbw">10</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
